noinst_LIBRARIES=libuussbb_helicity1.a

AM_FCFLAGS=-I${pkgincludedir} \
	   -I$(top_srcdir)/examples/uussbb/common

libuussbb_helicity1_a_SOURCES=\
abbrevh1l0.f90 \
abbrevh1l1.f90 \
d100h1l1.f90 \
d101h1l1.f90 \
d102h1l1.f90 \
d103h1l1.f90 \
d104h1l1.f90 \
d105h1l1.f90 \
d106h1l1.f90 \
d107h1l1.f90 \
d108h1l1.f90 \
d109h1l1.f90 \
d10h1l1.f90 \
d110h1l1.f90 \
d111h1l1.f90 \
d112h1l1.f90 \
d113h1l1.f90 \
d114h1l1.f90 \
d115h1l1.f90 \
d116h1l1.f90 \
d117h1l1.f90 \
d118h1l1.f90 \
d119h1l1.f90 \
d11h1l1.f90 \
d120h1l1.f90 \
d121h1l1.f90 \
d122h1l1.f90 \
d123h1l1.f90 \
d124h1l1.f90 \
d125h1l1.f90 \
d126h1l1.f90 \
d127h1l1.f90 \
d128h1l1.f90 \
d129h1l1.f90 \
d12h1l1.f90 \
d130h1l1.f90 \
d131h1l1.f90 \
d132h1l1.f90 \
d133h1l1.f90 \
d134h1l1.f90 \
d135h1l1.f90 \
d136h1l1.f90 \
d137h1l1.f90 \
d138h1l1.f90 \
d139h1l1.f90 \
d13h1l1.f90 \
d140h1l1.f90 \
d141h1l1.f90 \
d142h1l1.f90 \
d143h1l1.f90 \
d144h1l1.f90 \
d145h1l1.f90 \
d146h1l1.f90 \
d147h1l1.f90 \
d148h1l1.f90 \
d149h1l1.f90 \
d14h1l1.f90 \
d150h1l1.f90 \
d151h1l1.f90 \
d152h1l1.f90 \
d153h1l1.f90 \
d154h1l1.f90 \
d155h1l1.f90 \
d156h1l1.f90 \
d157h1l1.f90 \
d158h1l1.f90 \
d159h1l1.f90 \
d15h1l1.f90 \
d160h1l1.f90 \
d161h1l1.f90 \
d162h1l1.f90 \
d163h1l1.f90 \
d164h1l1.f90 \
d165h1l1.f90 \
d166h1l1.f90 \
d167h1l1.f90 \
d168h1l1.f90 \
d169h1l1.f90 \
d16h1l1.f90 \
d170h1l1.f90 \
d171h1l1.f90 \
d172h1l1.f90 \
d173h1l1.f90 \
d174h1l1.f90 \
d175h1l1.f90 \
d176h1l1.f90 \
d177h1l1.f90 \
d178h1l1.f90 \
d179h1l1.f90 \
d17h1l1.f90 \
d180h1l1.f90 \
d181h1l1.f90 \
d182h1l1.f90 \
d183h1l1.f90 \
d184h1l1.f90 \
d185h1l1.f90 \
d186h1l1.f90 \
d187h1l1.f90 \
d188h1l1.f90 \
d189h1l1.f90 \
d18h1l1.f90 \
d190h1l1.f90 \
d191h1l1.f90 \
d192h1l1.f90 \
d193h1l1.f90 \
d194h1l1.f90 \
d195h1l1.f90 \
d196h1l1.f90 \
d197h1l1.f90 \
d198h1l1.f90 \
d199h1l1.f90 \
d19h1l1.f90 \
d1h1l1.f90 \
d200h1l1.f90 \
d201h1l1.f90 \
d202h1l1.f90 \
d203h1l1.f90 \
d204h1l1.f90 \
d205h1l1.f90 \
d206h1l1.f90 \
d207h1l1.f90 \
d208h1l1.f90 \
d209h1l1.f90 \
d20h1l1.f90 \
d210h1l1.f90 \
d211h1l1.f90 \
d212h1l1.f90 \
d213h1l1.f90 \
d214h1l1.f90 \
d215h1l1.f90 \
d216h1l1.f90 \
d217h1l1.f90 \
d218h1l1.f90 \
d219h1l1.f90 \
d21h1l1.f90 \
d220h1l1.f90 \
d221h1l1.f90 \
d222h1l1.f90 \
d223h1l1.f90 \
d224h1l1.f90 \
d225h1l1.f90 \
d226h1l1.f90 \
d227h1l1.f90 \
d228h1l1.f90 \
d229h1l1.f90 \
d22h1l1.f90 \
d230h1l1.f90 \
d231h1l1.f90 \
d232h1l1.f90 \
d233h1l1.f90 \
d234h1l1.f90 \
d235h1l1.f90 \
d236h1l1.f90 \
d237h1l1.f90 \
d238h1l1.f90 \
d239h1l1.f90 \
d23h1l1.f90 \
d240h1l1.f90 \
d241h1l1.f90 \
d242h1l1.f90 \
d243h1l1.f90 \
d244h1l1.f90 \
d245h1l1.f90 \
d246h1l1.f90 \
d247h1l1.f90 \
d248h1l1.f90 \
d249h1l1.f90 \
d24h1l1.f90 \
d250h1l1.f90 \
d251h1l1.f90 \
d252h1l1.f90 \
d253h1l1.f90 \
d254h1l1.f90 \
d255h1l1.f90 \
d256h1l1.f90 \
d257h1l1.f90 \
d258h1l1.f90 \
d25h1l1.f90 \
d26h1l1.f90 \
d27h1l1.f90 \
d28h1l1.f90 \
d29h1l1.f90 \
d2h1l1.f90 \
d30h1l1.f90 \
d31h1l1.f90 \
d32h1l1.f90 \
d33h1l1.f90 \
d34h1l1.f90 \
d35h1l1.f90 \
d36h1l1.f90 \
d37h1l1.f90 \
d38h1l1.f90 \
d39h1l1.f90 \
d3h1l1.f90 \
d40h1l1.f90 \
d41h1l1.f90 \
d42h1l1.f90 \
d43h1l1.f90 \
d44h1l1.f90 \
d45h1l1.f90 \
d46h1l1.f90 \
d47h1l1.f90 \
d48h1l1.f90 \
d49h1l1.f90 \
d4h1l1.f90 \
d50h1l1.f90 \
d51h1l1.f90 \
d52h1l1.f90 \
d53h1l1.f90 \
d54h1l1.f90 \
d55h1l1.f90 \
d56h1l1.f90 \
d57h1l1.f90 \
d58h1l1.f90 \
d59h1l1.f90 \
d5h1l1.f90 \
d60h1l1.f90 \
d61h1l1.f90 \
d62h1l1.f90 \
d63h1l1.f90 \
d64h1l1.f90 \
d65h1l1.f90 \
d66h1l1.f90 \
d67h1l1.f90 \
d68h1l1.f90 \
d69h1l1.f90 \
d6h1l1.f90 \
d70h1l1.f90 \
d71h1l1.f90 \
d72h1l1.f90 \
d73h1l1.f90 \
d74h1l1.f90 \
d75h1l1.f90 \
d76h1l1.f90 \
d77h1l1.f90 \
d78h1l1.f90 \
d79h1l1.f90 \
d7h1l1.f90 \
d80h1l1.f90 \
d81h1l1.f90 \
d82h1l1.f90 \
d83h1l1.f90 \
d84h1l1.f90 \
d85h1l1.f90 \
d86h1l1.f90 \
d87h1l1.f90 \
d88h1l1.f90 \
d89h1l1.f90 \
d8h1l1.f90 \
d90h1l1.f90 \
d91h1l1.f90 \
d92h1l1.f90 \
d93h1l1.f90 \
d94h1l1.f90 \
d95h1l1.f90 \
d96h1l1.f90 \
d97h1l1.f90 \
d98h1l1.f90 \
d99h1l1.f90 \
d9h1l1.f90 \
diagramsh1l0.f90 \
diagramsh1l1.f90 \
init1.f90

CLEANFILES=\
uussbb_abbrevh1l0.mod \
uussbb_abbrevh1l1.mod \
uussbb_d100h1l1.mod \
uussbb_d101h1l1.mod \
uussbb_d102h1l1.mod \
uussbb_d103h1l1.mod \
uussbb_d104h1l1.mod \
uussbb_d105h1l1.mod \
uussbb_d106h1l1.mod \
uussbb_d107h1l1.mod \
uussbb_d108h1l1.mod \
uussbb_d109h1l1.mod \
uussbb_d10h1l1.mod \
uussbb_d110h1l1.mod \
uussbb_d111h1l1.mod \
uussbb_d112h1l1.mod \
uussbb_d113h1l1.mod \
uussbb_d114h1l1.mod \
uussbb_d115h1l1.mod \
uussbb_d116h1l1.mod \
uussbb_d117h1l1.mod \
uussbb_d118h1l1.mod \
uussbb_d119h1l1.mod \
uussbb_d11h1l1.mod \
uussbb_d120h1l1.mod \
uussbb_d121h1l1.mod \
uussbb_d122h1l1.mod \
uussbb_d123h1l1.mod \
uussbb_d124h1l1.mod \
uussbb_d125h1l1.mod \
uussbb_d126h1l1.mod \
uussbb_d127h1l1.mod \
uussbb_d128h1l1.mod \
uussbb_d129h1l1.mod \
uussbb_d12h1l1.mod \
uussbb_d130h1l1.mod \
uussbb_d131h1l1.mod \
uussbb_d132h1l1.mod \
uussbb_d133h1l1.mod \
uussbb_d134h1l1.mod \
uussbb_d135h1l1.mod \
uussbb_d136h1l1.mod \
uussbb_d137h1l1.mod \
uussbb_d138h1l1.mod \
uussbb_d139h1l1.mod \
uussbb_d13h1l1.mod \
uussbb_d140h1l1.mod \
uussbb_d141h1l1.mod \
uussbb_d142h1l1.mod \
uussbb_d143h1l1.mod \
uussbb_d144h1l1.mod \
uussbb_d145h1l1.mod \
uussbb_d146h1l1.mod \
uussbb_d147h1l1.mod \
uussbb_d148h1l1.mod \
uussbb_d149h1l1.mod \
uussbb_d14h1l1.mod \
uussbb_d150h1l1.mod \
uussbb_d151h1l1.mod \
uussbb_d152h1l1.mod \
uussbb_d153h1l1.mod \
uussbb_d154h1l1.mod \
uussbb_d155h1l1.mod \
uussbb_d156h1l1.mod \
uussbb_d157h1l1.mod \
uussbb_d158h1l1.mod \
uussbb_d159h1l1.mod \
uussbb_d15h1l1.mod \
uussbb_d160h1l1.mod \
uussbb_d161h1l1.mod \
uussbb_d162h1l1.mod \
uussbb_d163h1l1.mod \
uussbb_d164h1l1.mod \
uussbb_d165h1l1.mod \
uussbb_d166h1l1.mod \
uussbb_d167h1l1.mod \
uussbb_d168h1l1.mod \
uussbb_d169h1l1.mod \
uussbb_d16h1l1.mod \
uussbb_d170h1l1.mod \
uussbb_d171h1l1.mod \
uussbb_d172h1l1.mod \
uussbb_d173h1l1.mod \
uussbb_d174h1l1.mod \
uussbb_d175h1l1.mod \
uussbb_d176h1l1.mod \
uussbb_d177h1l1.mod \
uussbb_d178h1l1.mod \
uussbb_d179h1l1.mod \
uussbb_d17h1l1.mod \
uussbb_d180h1l1.mod \
uussbb_d181h1l1.mod \
uussbb_d182h1l1.mod \
uussbb_d183h1l1.mod \
uussbb_d184h1l1.mod \
uussbb_d185h1l1.mod \
uussbb_d186h1l1.mod \
uussbb_d187h1l1.mod \
uussbb_d188h1l1.mod \
uussbb_d189h1l1.mod \
uussbb_d18h1l1.mod \
uussbb_d190h1l1.mod \
uussbb_d191h1l1.mod \
uussbb_d192h1l1.mod \
uussbb_d193h1l1.mod \
uussbb_d194h1l1.mod \
uussbb_d195h1l1.mod \
uussbb_d196h1l1.mod \
uussbb_d197h1l1.mod \
uussbb_d198h1l1.mod \
uussbb_d199h1l1.mod \
uussbb_d19h1l1.mod \
uussbb_d1h1l1.mod \
uussbb_d200h1l1.mod \
uussbb_d201h1l1.mod \
uussbb_d202h1l1.mod \
uussbb_d203h1l1.mod \
uussbb_d204h1l1.mod \
uussbb_d205h1l1.mod \
uussbb_d206h1l1.mod \
uussbb_d207h1l1.mod \
uussbb_d208h1l1.mod \
uussbb_d209h1l1.mod \
uussbb_d20h1l1.mod \
uussbb_d210h1l1.mod \
uussbb_d211h1l1.mod \
uussbb_d212h1l1.mod \
uussbb_d213h1l1.mod \
uussbb_d214h1l1.mod \
uussbb_d215h1l1.mod \
uussbb_d216h1l1.mod \
uussbb_d217h1l1.mod \
uussbb_d218h1l1.mod \
uussbb_d219h1l1.mod \
uussbb_d21h1l1.mod \
uussbb_d220h1l1.mod \
uussbb_d221h1l1.mod \
uussbb_d222h1l1.mod \
uussbb_d223h1l1.mod \
uussbb_d224h1l1.mod \
uussbb_d225h1l1.mod \
uussbb_d226h1l1.mod \
uussbb_d227h1l1.mod \
uussbb_d228h1l1.mod \
uussbb_d229h1l1.mod \
uussbb_d22h1l1.mod \
uussbb_d230h1l1.mod \
uussbb_d231h1l1.mod \
uussbb_d232h1l1.mod \
uussbb_d233h1l1.mod \
uussbb_d234h1l1.mod \
uussbb_d235h1l1.mod \
uussbb_d236h1l1.mod \
uussbb_d237h1l1.mod \
uussbb_d238h1l1.mod \
uussbb_d239h1l1.mod \
uussbb_d23h1l1.mod \
uussbb_d240h1l1.mod \
uussbb_d241h1l1.mod \
uussbb_d242h1l1.mod \
uussbb_d243h1l1.mod \
uussbb_d244h1l1.mod \
uussbb_d245h1l1.mod \
uussbb_d246h1l1.mod \
uussbb_d247h1l1.mod \
uussbb_d248h1l1.mod \
uussbb_d249h1l1.mod \
uussbb_d24h1l1.mod \
uussbb_d250h1l1.mod \
uussbb_d251h1l1.mod \
uussbb_d252h1l1.mod \
uussbb_d253h1l1.mod \
uussbb_d254h1l1.mod \
uussbb_d255h1l1.mod \
uussbb_d256h1l1.mod \
uussbb_d257h1l1.mod \
uussbb_d258h1l1.mod \
uussbb_d25h1l1.mod \
uussbb_d26h1l1.mod \
uussbb_d27h1l1.mod \
uussbb_d28h1l1.mod \
uussbb_d29h1l1.mod \
uussbb_d2h1l1.mod \
uussbb_d30h1l1.mod \
uussbb_d31h1l1.mod \
uussbb_d32h1l1.mod \
uussbb_d33h1l1.mod \
uussbb_d34h1l1.mod \
uussbb_d35h1l1.mod \
uussbb_d36h1l1.mod \
uussbb_d37h1l1.mod \
uussbb_d38h1l1.mod \
uussbb_d39h1l1.mod \
uussbb_d3h1l1.mod \
uussbb_d40h1l1.mod \
uussbb_d41h1l1.mod \
uussbb_d42h1l1.mod \
uussbb_d43h1l1.mod \
uussbb_d44h1l1.mod \
uussbb_d45h1l1.mod \
uussbb_d46h1l1.mod \
uussbb_d47h1l1.mod \
uussbb_d48h1l1.mod \
uussbb_d49h1l1.mod \
uussbb_d4h1l1.mod \
uussbb_d50h1l1.mod \
uussbb_d51h1l1.mod \
uussbb_d52h1l1.mod \
uussbb_d53h1l1.mod \
uussbb_d54h1l1.mod \
uussbb_d55h1l1.mod \
uussbb_d56h1l1.mod \
uussbb_d57h1l1.mod \
uussbb_d58h1l1.mod \
uussbb_d59h1l1.mod \
uussbb_d5h1l1.mod \
uussbb_d60h1l1.mod \
uussbb_d61h1l1.mod \
uussbb_d62h1l1.mod \
uussbb_d63h1l1.mod \
uussbb_d64h1l1.mod \
uussbb_d65h1l1.mod \
uussbb_d66h1l1.mod \
uussbb_d67h1l1.mod \
uussbb_d68h1l1.mod \
uussbb_d69h1l1.mod \
uussbb_d6h1l1.mod \
uussbb_d70h1l1.mod \
uussbb_d71h1l1.mod \
uussbb_d72h1l1.mod \
uussbb_d73h1l1.mod \
uussbb_d74h1l1.mod \
uussbb_d75h1l1.mod \
uussbb_d76h1l1.mod \
uussbb_d77h1l1.mod \
uussbb_d78h1l1.mod \
uussbb_d79h1l1.mod \
uussbb_d7h1l1.mod \
uussbb_d80h1l1.mod \
uussbb_d81h1l1.mod \
uussbb_d82h1l1.mod \
uussbb_d83h1l1.mod \
uussbb_d84h1l1.mod \
uussbb_d85h1l1.mod \
uussbb_d86h1l1.mod \
uussbb_d87h1l1.mod \
uussbb_d88h1l1.mod \
uussbb_d89h1l1.mod \
uussbb_d8h1l1.mod \
uussbb_d90h1l1.mod \
uussbb_d91h1l1.mod \
uussbb_d92h1l1.mod \
uussbb_d93h1l1.mod \
uussbb_d94h1l1.mod \
uussbb_d95h1l1.mod \
uussbb_d96h1l1.mod \
uussbb_d97h1l1.mod \
uussbb_d98h1l1.mod \
uussbb_d99h1l1.mod \
uussbb_d9h1l1.mod \
uussbb_diagramsh1l0.mod \
uussbb_diagramsh1l1.mod \
uussbb_init1.mod

include Makefile.dep
