noinst_LIBRARIES=libuussbb_helicity2.a

AM_FCFLAGS=-I${pkgincludedir} \
	   -I$(top_srcdir)/examples/uussbb/common

libuussbb_helicity2_a_SOURCES=\
abbrevh2l0.f90 \
abbrevh2l1.f90 \
d100h2l1.f90 \
d101h2l1.f90 \
d102h2l1.f90 \
d103h2l1.f90 \
d104h2l1.f90 \
d105h2l1.f90 \
d106h2l1.f90 \
d107h2l1.f90 \
d108h2l1.f90 \
d109h2l1.f90 \
d10h2l1.f90 \
d110h2l1.f90 \
d111h2l1.f90 \
d112h2l1.f90 \
d113h2l1.f90 \
d114h2l1.f90 \
d115h2l1.f90 \
d116h2l1.f90 \
d117h2l1.f90 \
d118h2l1.f90 \
d119h2l1.f90 \
d11h2l1.f90 \
d120h2l1.f90 \
d121h2l1.f90 \
d122h2l1.f90 \
d123h2l1.f90 \
d124h2l1.f90 \
d125h2l1.f90 \
d126h2l1.f90 \
d127h2l1.f90 \
d128h2l1.f90 \
d129h2l1.f90 \
d12h2l1.f90 \
d130h2l1.f90 \
d131h2l1.f90 \
d132h2l1.f90 \
d133h2l1.f90 \
d134h2l1.f90 \
d135h2l1.f90 \
d136h2l1.f90 \
d137h2l1.f90 \
d138h2l1.f90 \
d139h2l1.f90 \
d13h2l1.f90 \
d140h2l1.f90 \
d141h2l1.f90 \
d142h2l1.f90 \
d143h2l1.f90 \
d144h2l1.f90 \
d145h2l1.f90 \
d146h2l1.f90 \
d147h2l1.f90 \
d148h2l1.f90 \
d149h2l1.f90 \
d14h2l1.f90 \
d150h2l1.f90 \
d151h2l1.f90 \
d152h2l1.f90 \
d153h2l1.f90 \
d154h2l1.f90 \
d155h2l1.f90 \
d156h2l1.f90 \
d157h2l1.f90 \
d158h2l1.f90 \
d159h2l1.f90 \
d15h2l1.f90 \
d160h2l1.f90 \
d161h2l1.f90 \
d162h2l1.f90 \
d163h2l1.f90 \
d164h2l1.f90 \
d165h2l1.f90 \
d166h2l1.f90 \
d167h2l1.f90 \
d168h2l1.f90 \
d169h2l1.f90 \
d16h2l1.f90 \
d170h2l1.f90 \
d171h2l1.f90 \
d172h2l1.f90 \
d173h2l1.f90 \
d174h2l1.f90 \
d175h2l1.f90 \
d176h2l1.f90 \
d177h2l1.f90 \
d178h2l1.f90 \
d179h2l1.f90 \
d17h2l1.f90 \
d180h2l1.f90 \
d181h2l1.f90 \
d182h2l1.f90 \
d183h2l1.f90 \
d184h2l1.f90 \
d185h2l1.f90 \
d186h2l1.f90 \
d187h2l1.f90 \
d188h2l1.f90 \
d189h2l1.f90 \
d18h2l1.f90 \
d190h2l1.f90 \
d191h2l1.f90 \
d192h2l1.f90 \
d193h2l1.f90 \
d194h2l1.f90 \
d195h2l1.f90 \
d196h2l1.f90 \
d197h2l1.f90 \
d198h2l1.f90 \
d199h2l1.f90 \
d19h2l1.f90 \
d1h2l1.f90 \
d200h2l1.f90 \
d201h2l1.f90 \
d202h2l1.f90 \
d203h2l1.f90 \
d204h2l1.f90 \
d205h2l1.f90 \
d206h2l1.f90 \
d207h2l1.f90 \
d208h2l1.f90 \
d209h2l1.f90 \
d20h2l1.f90 \
d210h2l1.f90 \
d211h2l1.f90 \
d212h2l1.f90 \
d213h2l1.f90 \
d214h2l1.f90 \
d215h2l1.f90 \
d216h2l1.f90 \
d217h2l1.f90 \
d218h2l1.f90 \
d219h2l1.f90 \
d21h2l1.f90 \
d220h2l1.f90 \
d221h2l1.f90 \
d222h2l1.f90 \
d223h2l1.f90 \
d224h2l1.f90 \
d225h2l1.f90 \
d226h2l1.f90 \
d227h2l1.f90 \
d228h2l1.f90 \
d229h2l1.f90 \
d22h2l1.f90 \
d230h2l1.f90 \
d231h2l1.f90 \
d232h2l1.f90 \
d233h2l1.f90 \
d234h2l1.f90 \
d235h2l1.f90 \
d236h2l1.f90 \
d237h2l1.f90 \
d238h2l1.f90 \
d239h2l1.f90 \
d23h2l1.f90 \
d240h2l1.f90 \
d241h2l1.f90 \
d242h2l1.f90 \
d243h2l1.f90 \
d244h2l1.f90 \
d245h2l1.f90 \
d246h2l1.f90 \
d247h2l1.f90 \
d248h2l1.f90 \
d249h2l1.f90 \
d24h2l1.f90 \
d250h2l1.f90 \
d251h2l1.f90 \
d252h2l1.f90 \
d253h2l1.f90 \
d254h2l1.f90 \
d255h2l1.f90 \
d256h2l1.f90 \
d257h2l1.f90 \
d258h2l1.f90 \
d25h2l1.f90 \
d26h2l1.f90 \
d27h2l1.f90 \
d28h2l1.f90 \
d29h2l1.f90 \
d2h2l1.f90 \
d30h2l1.f90 \
d31h2l1.f90 \
d32h2l1.f90 \
d33h2l1.f90 \
d34h2l1.f90 \
d35h2l1.f90 \
d36h2l1.f90 \
d37h2l1.f90 \
d38h2l1.f90 \
d39h2l1.f90 \
d3h2l1.f90 \
d40h2l1.f90 \
d41h2l1.f90 \
d42h2l1.f90 \
d43h2l1.f90 \
d44h2l1.f90 \
d45h2l1.f90 \
d46h2l1.f90 \
d47h2l1.f90 \
d48h2l1.f90 \
d49h2l1.f90 \
d4h2l1.f90 \
d50h2l1.f90 \
d51h2l1.f90 \
d52h2l1.f90 \
d53h2l1.f90 \
d54h2l1.f90 \
d55h2l1.f90 \
d56h2l1.f90 \
d57h2l1.f90 \
d58h2l1.f90 \
d59h2l1.f90 \
d5h2l1.f90 \
d60h2l1.f90 \
d61h2l1.f90 \
d62h2l1.f90 \
d63h2l1.f90 \
d64h2l1.f90 \
d65h2l1.f90 \
d66h2l1.f90 \
d67h2l1.f90 \
d68h2l1.f90 \
d69h2l1.f90 \
d6h2l1.f90 \
d70h2l1.f90 \
d71h2l1.f90 \
d72h2l1.f90 \
d73h2l1.f90 \
d74h2l1.f90 \
d75h2l1.f90 \
d76h2l1.f90 \
d77h2l1.f90 \
d78h2l1.f90 \
d79h2l1.f90 \
d7h2l1.f90 \
d80h2l1.f90 \
d81h2l1.f90 \
d82h2l1.f90 \
d83h2l1.f90 \
d84h2l1.f90 \
d85h2l1.f90 \
d86h2l1.f90 \
d87h2l1.f90 \
d88h2l1.f90 \
d89h2l1.f90 \
d8h2l1.f90 \
d90h2l1.f90 \
d91h2l1.f90 \
d92h2l1.f90 \
d93h2l1.f90 \
d94h2l1.f90 \
d95h2l1.f90 \
d96h2l1.f90 \
d97h2l1.f90 \
d98h2l1.f90 \
d99h2l1.f90 \
d9h2l1.f90 \
diagramsh2l0.f90 \
diagramsh2l1.f90 \
init2.f90

CLEANFILES=\
uussbb_abbrevh2l0.mod \
uussbb_abbrevh2l1.mod \
uussbb_d100h2l1.mod \
uussbb_d101h2l1.mod \
uussbb_d102h2l1.mod \
uussbb_d103h2l1.mod \
uussbb_d104h2l1.mod \
uussbb_d105h2l1.mod \
uussbb_d106h2l1.mod \
uussbb_d107h2l1.mod \
uussbb_d108h2l1.mod \
uussbb_d109h2l1.mod \
uussbb_d10h2l1.mod \
uussbb_d110h2l1.mod \
uussbb_d111h2l1.mod \
uussbb_d112h2l1.mod \
uussbb_d113h2l1.mod \
uussbb_d114h2l1.mod \
uussbb_d115h2l1.mod \
uussbb_d116h2l1.mod \
uussbb_d117h2l1.mod \
uussbb_d118h2l1.mod \
uussbb_d119h2l1.mod \
uussbb_d11h2l1.mod \
uussbb_d120h2l1.mod \
uussbb_d121h2l1.mod \
uussbb_d122h2l1.mod \
uussbb_d123h2l1.mod \
uussbb_d124h2l1.mod \
uussbb_d125h2l1.mod \
uussbb_d126h2l1.mod \
uussbb_d127h2l1.mod \
uussbb_d128h2l1.mod \
uussbb_d129h2l1.mod \
uussbb_d12h2l1.mod \
uussbb_d130h2l1.mod \
uussbb_d131h2l1.mod \
uussbb_d132h2l1.mod \
uussbb_d133h2l1.mod \
uussbb_d134h2l1.mod \
uussbb_d135h2l1.mod \
uussbb_d136h2l1.mod \
uussbb_d137h2l1.mod \
uussbb_d138h2l1.mod \
uussbb_d139h2l1.mod \
uussbb_d13h2l1.mod \
uussbb_d140h2l1.mod \
uussbb_d141h2l1.mod \
uussbb_d142h2l1.mod \
uussbb_d143h2l1.mod \
uussbb_d144h2l1.mod \
uussbb_d145h2l1.mod \
uussbb_d146h2l1.mod \
uussbb_d147h2l1.mod \
uussbb_d148h2l1.mod \
uussbb_d149h2l1.mod \
uussbb_d14h2l1.mod \
uussbb_d150h2l1.mod \
uussbb_d151h2l1.mod \
uussbb_d152h2l1.mod \
uussbb_d153h2l1.mod \
uussbb_d154h2l1.mod \
uussbb_d155h2l1.mod \
uussbb_d156h2l1.mod \
uussbb_d157h2l1.mod \
uussbb_d158h2l1.mod \
uussbb_d159h2l1.mod \
uussbb_d15h2l1.mod \
uussbb_d160h2l1.mod \
uussbb_d161h2l1.mod \
uussbb_d162h2l1.mod \
uussbb_d163h2l1.mod \
uussbb_d164h2l1.mod \
uussbb_d165h2l1.mod \
uussbb_d166h2l1.mod \
uussbb_d167h2l1.mod \
uussbb_d168h2l1.mod \
uussbb_d169h2l1.mod \
uussbb_d16h2l1.mod \
uussbb_d170h2l1.mod \
uussbb_d171h2l1.mod \
uussbb_d172h2l1.mod \
uussbb_d173h2l1.mod \
uussbb_d174h2l1.mod \
uussbb_d175h2l1.mod \
uussbb_d176h2l1.mod \
uussbb_d177h2l1.mod \
uussbb_d178h2l1.mod \
uussbb_d179h2l1.mod \
uussbb_d17h2l1.mod \
uussbb_d180h2l1.mod \
uussbb_d181h2l1.mod \
uussbb_d182h2l1.mod \
uussbb_d183h2l1.mod \
uussbb_d184h2l1.mod \
uussbb_d185h2l1.mod \
uussbb_d186h2l1.mod \
uussbb_d187h2l1.mod \
uussbb_d188h2l1.mod \
uussbb_d189h2l1.mod \
uussbb_d18h2l1.mod \
uussbb_d190h2l1.mod \
uussbb_d191h2l1.mod \
uussbb_d192h2l1.mod \
uussbb_d193h2l1.mod \
uussbb_d194h2l1.mod \
uussbb_d195h2l1.mod \
uussbb_d196h2l1.mod \
uussbb_d197h2l1.mod \
uussbb_d198h2l1.mod \
uussbb_d199h2l1.mod \
uussbb_d19h2l1.mod \
uussbb_d1h2l1.mod \
uussbb_d200h2l1.mod \
uussbb_d201h2l1.mod \
uussbb_d202h2l1.mod \
uussbb_d203h2l1.mod \
uussbb_d204h2l1.mod \
uussbb_d205h2l1.mod \
uussbb_d206h2l1.mod \
uussbb_d207h2l1.mod \
uussbb_d208h2l1.mod \
uussbb_d209h2l1.mod \
uussbb_d20h2l1.mod \
uussbb_d210h2l1.mod \
uussbb_d211h2l1.mod \
uussbb_d212h2l1.mod \
uussbb_d213h2l1.mod \
uussbb_d214h2l1.mod \
uussbb_d215h2l1.mod \
uussbb_d216h2l1.mod \
uussbb_d217h2l1.mod \
uussbb_d218h2l1.mod \
uussbb_d219h2l1.mod \
uussbb_d21h2l1.mod \
uussbb_d220h2l1.mod \
uussbb_d221h2l1.mod \
uussbb_d222h2l1.mod \
uussbb_d223h2l1.mod \
uussbb_d224h2l1.mod \
uussbb_d225h2l1.mod \
uussbb_d226h2l1.mod \
uussbb_d227h2l1.mod \
uussbb_d228h2l1.mod \
uussbb_d229h2l1.mod \
uussbb_d22h2l1.mod \
uussbb_d230h2l1.mod \
uussbb_d231h2l1.mod \
uussbb_d232h2l1.mod \
uussbb_d233h2l1.mod \
uussbb_d234h2l1.mod \
uussbb_d235h2l1.mod \
uussbb_d236h2l1.mod \
uussbb_d237h2l1.mod \
uussbb_d238h2l1.mod \
uussbb_d239h2l1.mod \
uussbb_d23h2l1.mod \
uussbb_d240h2l1.mod \
uussbb_d241h2l1.mod \
uussbb_d242h2l1.mod \
uussbb_d243h2l1.mod \
uussbb_d244h2l1.mod \
uussbb_d245h2l1.mod \
uussbb_d246h2l1.mod \
uussbb_d247h2l1.mod \
uussbb_d248h2l1.mod \
uussbb_d249h2l1.mod \
uussbb_d24h2l1.mod \
uussbb_d250h2l1.mod \
uussbb_d251h2l1.mod \
uussbb_d252h2l1.mod \
uussbb_d253h2l1.mod \
uussbb_d254h2l1.mod \
uussbb_d255h2l1.mod \
uussbb_d256h2l1.mod \
uussbb_d257h2l1.mod \
uussbb_d258h2l1.mod \
uussbb_d25h2l1.mod \
uussbb_d26h2l1.mod \
uussbb_d27h2l1.mod \
uussbb_d28h2l1.mod \
uussbb_d29h2l1.mod \
uussbb_d2h2l1.mod \
uussbb_d30h2l1.mod \
uussbb_d31h2l1.mod \
uussbb_d32h2l1.mod \
uussbb_d33h2l1.mod \
uussbb_d34h2l1.mod \
uussbb_d35h2l1.mod \
uussbb_d36h2l1.mod \
uussbb_d37h2l1.mod \
uussbb_d38h2l1.mod \
uussbb_d39h2l1.mod \
uussbb_d3h2l1.mod \
uussbb_d40h2l1.mod \
uussbb_d41h2l1.mod \
uussbb_d42h2l1.mod \
uussbb_d43h2l1.mod \
uussbb_d44h2l1.mod \
uussbb_d45h2l1.mod \
uussbb_d46h2l1.mod \
uussbb_d47h2l1.mod \
uussbb_d48h2l1.mod \
uussbb_d49h2l1.mod \
uussbb_d4h2l1.mod \
uussbb_d50h2l1.mod \
uussbb_d51h2l1.mod \
uussbb_d52h2l1.mod \
uussbb_d53h2l1.mod \
uussbb_d54h2l1.mod \
uussbb_d55h2l1.mod \
uussbb_d56h2l1.mod \
uussbb_d57h2l1.mod \
uussbb_d58h2l1.mod \
uussbb_d59h2l1.mod \
uussbb_d5h2l1.mod \
uussbb_d60h2l1.mod \
uussbb_d61h2l1.mod \
uussbb_d62h2l1.mod \
uussbb_d63h2l1.mod \
uussbb_d64h2l1.mod \
uussbb_d65h2l1.mod \
uussbb_d66h2l1.mod \
uussbb_d67h2l1.mod \
uussbb_d68h2l1.mod \
uussbb_d69h2l1.mod \
uussbb_d6h2l1.mod \
uussbb_d70h2l1.mod \
uussbb_d71h2l1.mod \
uussbb_d72h2l1.mod \
uussbb_d73h2l1.mod \
uussbb_d74h2l1.mod \
uussbb_d75h2l1.mod \
uussbb_d76h2l1.mod \
uussbb_d77h2l1.mod \
uussbb_d78h2l1.mod \
uussbb_d79h2l1.mod \
uussbb_d7h2l1.mod \
uussbb_d80h2l1.mod \
uussbb_d81h2l1.mod \
uussbb_d82h2l1.mod \
uussbb_d83h2l1.mod \
uussbb_d84h2l1.mod \
uussbb_d85h2l1.mod \
uussbb_d86h2l1.mod \
uussbb_d87h2l1.mod \
uussbb_d88h2l1.mod \
uussbb_d89h2l1.mod \
uussbb_d8h2l1.mod \
uussbb_d90h2l1.mod \
uussbb_d91h2l1.mod \
uussbb_d92h2l1.mod \
uussbb_d93h2l1.mod \
uussbb_d94h2l1.mod \
uussbb_d95h2l1.mod \
uussbb_d96h2l1.mod \
uussbb_d97h2l1.mod \
uussbb_d98h2l1.mod \
uussbb_d99h2l1.mod \
uussbb_d9h2l1.mod \
uussbb_diagramsh2l0.mod \
uussbb_diagramsh2l1.mod \
uussbb_init2.mod

include Makefile.dep
